welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:8: error: not found: value ac
	if ( a+b == 10 * ac || a+b== 10 * bc ) {
                         ^