welcome.lessons.welcome.bat.bool2.BlueTicket.scala.code
def blueTicket(a:Int, b:Int, c:Int):Int = {
	if (a+b ==10 || a+c==10 || b+c==10 ) {
		return 10
		
	}
	else {

	if ( a+b == 10 * ac || a+b== 10 * bc ) {
		return 5
	}
	else {
		return 0
	}
}
}
